--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starmyri_calendar",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Calendar for STARMYRI",
   "main": "dbConnector.js",
   "scripts": {
@@ -21,12 +21,20 @@
   },
   "homepage": "https://github.com/DrAndri/weekCalendar#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "fb": "^1.1.1",
+    "express-mysql-session": "^2.0.1",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
+    "fb": "^2.0.0",
+    "google-auth-library": "^2.0.0",
+    "google-id-token-verifier": "^0.2.3",
+    "googleapis": "^22.2.0",
+    "lodash": "^4.17.10",
     "moment": "^2.14.1",
     "mysql": "^2.11.1",
     "node-schedule": "^1.1.1",
-    "nodemailer": "^2.5.0",
-    "socket.io": "^1.4.8"
+    "nodemailer": "^4.6.8",
+    "socket.io": "^2.1.1"
   }
 }
