--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/DrAndri/weekCalendar#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
-    "fb": "^2.0.0",
     "google-auth-library": "^2.0.0",
     "google-id-token-verifier": "^0.2.3",
     "googleapis": "^22.2.0",
@@ -35,6 +35,9 @@
     "mysql": "^2.11.1",
     "node-schedule": "^1.1.1",
     "nodemailer": "^4.6.8",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^2.1.1"
   }
 }
