--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.11.1",
     "node-schedule": "^1.1.1",
     "nodemailer": "^4.6.8",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
