--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-schedule": "^1.1.1",
     "nodemailer": "^4.6.8",
     "nodemailer-smtp-transport": "^2.7.4",
+    "bluebird": "3.5.3",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
