--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starmyri_calendar",
+  "name": "starmyri",
   "version": "1.1.1",
   "description": "Calendar for STARMYRI",
   "main": "dbConnector.js",
