--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "gulp-minify": "^3.1.0"
   }
 }
