--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "gulp-minify": "^3.1.0",
     "gulp-csso": "^3.0.1",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-autoprefixer": "^6.0.0"
   }
 }
