--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/DrAndri/dbConnector#readme",
   "dependencies": {
+    "bluebird": "3.5.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
@@ -39,7 +40,6 @@
     "node-schedule": "^1.1.1",
     "nodemailer": "^4.6.8",
     "nodemailer-smtp-transport": "^2.7.4",
-    "bluebird": "3.5.3",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
@@ -49,6 +49,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-csso": "^3.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-autoprefixer": "^6.0.0"
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-rename": "^1.4.0"
   }
 }
