--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "gulp": "^4.0.0",
     "gulp-minify": "^3.1.0",
     "gulp-csso": "^3.0.1",
     "gulp-uglify": "^3.0.2",
